--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,3 +76,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/Aura.AuraAttributeSet.Resilence",NewName="/Script/Aura.AuraAttributeSet.Resilience")
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bAllowClientSideNavigation=True
+
